# dspico-firmware

./: .gitignore  CMakeLists.txt  README.md  compile.sh  setup_environment.sh
docs/: commands.md  r4.md
src/: blowfish.c  blowfish.h  common.h  main.cpp  ntrCard.pio  ntrCardIrq.S  ntrCardRom.c  ntrCardRom.h  ntrCardRomGame.c  ntrCardRomGame.h  ntrCardRomGameNoScramble.c  ntrCardRomGameNoScramble.h  ntrCardRomGameR4.cpp  ntrCardRomGameSd.cpp  ntrCardRomGameUsb.cpp  ntrCardRomGameUsb.h  ntrCardRomNorm.c  ntrCardRomSecure.c  ntrCardSpiUart.c  ntrCardSpiUart.h  powerSaving.c  powerSaving.h  r4.h  romData.S  romData.h  scrambler.c  scrambler.h  scramblerRing.c  scramblerRing.h  usbEventQueue.c  usbEventQueue.h  wrfuxxed.S  wrfuxxed.h  xor.S  xor.h
src/sd/: SdCard.cpp  SdCard.h  SdCardInfo.h  rp2040_sdio.cpp  rp2040_sdio.h  rp2040_sdio.pio
src/sd/fatfs/: diskio.cpp  ff.c  ffconf.h
src/tinyusb/: dcd.h  dcd_rp2040.c  osal_none.h  rp2040_usb.h  tusb_config.h  tusb_option.h
